# wolf

./: Dockerfile  README.md  pyproject.toml
flaskr/: __init__.py
flaskr/static/styles/: main.css
flaskr/templates/: header.html  index.html
tests/: test_wolf.py
